--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -7,7 +7,9 @@
     <title>Personalizção dos fundos</title>
     <style>
         body {
-            background-image: url(imagens/wallpaper001.jpg);
+            background-image: url(https://images7.alphacoders.com/100/1002384.jpg);
+            background-size: 300px 300px;
+            background-repeat: repeat-x;
         }
     </style>
 </head>
