--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela.</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: cover;background-attachment: fixed;*/
+
+            //* Shothand - background
+            color > image > position > repeat > [size]
+            > attachament
+            */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 20px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +33,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo.</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor libero sint obcaecati debitis blanditiis, officiis neque corporis pariatur minus repellat fuga rerum sed eum nisi vitae earum eos quis nemo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, omnis? Reprehenderit harum voluptatum doloribus repellendus incidunt ab itaque beatae sapiente dignissimos provident est, error nemo quidem a, magni veniam fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magnam impedit nobis quis illo, perspiciatis in corporis officiis eius modi exercitationem repellendus animi minus ipsam autem, quam ut explicabo quibusdam!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor libero sint obcaecati debitis blanditiis, officiis neque corporis pariatur minus repellat fuga rerum sed eum nisi vitae earum eos quis nemo?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, omnis? Reprehenderit harum voluptatum doloribus repellendus incidunt ab itaque beatae sapiente dignissimos provident est, error nemo quidem a, magni veniam fugit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magnam impedit nobis quis illo, perspiciatis in corporis officiis eius modi exercitationem repellendus animi minus ipsam autem, quam ut explicabo quibusdam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, praesentium! Voluptate doloribus maxime eos facilis placeat magnam reprehenderit, ex repellendus vero dolorum, ab fugiat. Accusamus alias ex odit architecto quod. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores veritatis velit animi hic deleniti quasi consectetur voluptatem, voluptatum accusamus omnis enim, corrupti nostrum placeat quidem. At nesciunt blanditiis aut adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro voluptatibus cumque quia, magni tenetur aut vel sed consectetur deleniti. Eius qui, voluptatibus numquam eveniet ullam odit ex veniam iure soluta. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut quia inventore id. Debitis doloremque aspernatur, eius magnam corporis repudiandae saepe vel culpa omnis laboriosam ex animi ullam expedita itaque quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, ut tenetur temporibus voluptate minus soluta illo explicabo neque amet at, natus ex ipsum debitis tempora, earum qui dolores molestiae eaque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, repellendus eligendi? Odit accusamus neque laboriosam quod facilis porro deserunt asperiores, corporis natus repellat illo tempore velit repellendus minus enim ipsum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit consequatur inventore necessitatibus quaerat quas numquam, laboriosam animi! Magnam numquam repudiandae delectus fuga veritatis magni tenetur eaque obcaecati sequi, autem assumenda. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error minus quaerat quam, ea voluptates totam saepe alias vitae a ipsa non? Asperiores, deserunt? Dolore assumenda, enim iusto obcaecati impedit natus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta reiciendis quisquam, quae vel accusantium dolore, animi nisi nesciunt ratione consectetur nulla eos voluptatum ipsum ipsam, voluptatibus laudantium dignissimos assumenda? Voluptatum.</p>
     </main>
     
 </body>
