--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -8,17 +8,17 @@
     <style>
         body {
             height: 100vh;
-            /*background-color: black;
+            background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover;background-attachment: fixed;*/
+            background-size: cover;background-attachment: fixed;
 
-            //* Shothand - background
+            /* Shothand - background
             color > image > position > repeat > [size]
             > attachament
             */
-            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            /*background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;*/
         }
         main {
             background-color: white;
