--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
        table {
            width: 500px;
            border-collapse: collapse;
+           position: relative;
         }
         td, th {
             border: 1px solid black;
@@ -26,6 +27,11 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
         }
         tbody > tr:nth-child(2n) {
             background-color: lightgray;
@@ -179,6 +185,30 @@
         <caption>População das universidades Federativas.</caption>
 
     </table>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, doloremque repellat qui quo nostrum, aliquam asperiores maiores esse ut id officia illo. Voluptatibus consectetur numquam, quia unde suscipit maxime earum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem commodi, at nemo dolores officia doloribus error nostrum vero ut quasi voluptate deleniti qui explicabo, incidunt perferendis praesentium expedita quas? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt commodi magni provident aut officiis. Quidem facilis saepe dolorem minima omnis laborum. Laborum vel odio fugiat dolor cupiditate assumenda, repellendus reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam tenetur exercitationem. Nemo dolor quo corrupti exercitationem laborum non blanditiis praesentium. Culpa eaque perferendis optio? Culpa quod recusandae officiis labore?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, doloremque repellat qui quo nostrum, aliquam asperiores maiores esse ut id officia illo. Voluptatibus consectetur numquam, quia unde suscipit maxime earum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem commodi, at nemo dolores officia doloribus error nostrum vero ut quasi voluptate deleniti qui explicabo, incidunt perferendis praesentium expedita quas? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt commodi magni provident aut officiis. Quidem facilis saepe dolorem minima omnis laborum. Laborum vel odio fugiat dolor cupiditate assumenda, repellendus reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam tenetur exercitationem. Nemo dolor quo corrupti exercitationem laborum non blanditiis praesentium. Culpa eaque perferendis optio? Culpa quod recusandae officiis labore?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, doloremque repellat qui quo nostrum, aliquam asperiores maiores esse ut id officia illo. Voluptatibus consectetur numquam, quia unde suscipit maxime earum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem commodi, at nemo dolores officia doloribus error nostrum vero ut quasi voluptate deleniti qui explicabo, incidunt perferendis praesentium expedita quas? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt commodi magni provident aut officiis. Quidem facilis saepe dolorem minima omnis laborum. Laborum vel odio fugiat dolor cupiditate assumenda, repellendus reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam tenetur exercitationem. Nemo dolor quo corrupti exercitationem laborum non blanditiis praesentium. Culpa eaque perferendis optio? Culpa quod recusandae officiis labore?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, doloremque repellat qui quo nostrum, aliquam asperiores maiores esse ut id officia illo. Voluptatibus consectetur numquam, quia unde suscipit maxime earum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem commodi, at nemo dolores officia doloribus error nostrum vero ut quasi voluptate deleniti qui explicabo, incidunt perferendis praesentium expedita quas? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt commodi magni provident aut officiis. Quidem facilis saepe dolorem minima omnis laborum. Laborum vel odio fugiat dolor cupiditate assumenda, repellendus reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam tenetur exercitationem. Nemo dolor quo corrupti exercitationem laborum non blanditiis praesentium. Culpa eaque perferendis optio? Culpa quod recusandae officiis labore?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, doloremque repellat qui quo nostrum, aliquam asperiores maiores esse ut id officia illo. Voluptatibus consectetur numquam, quia unde suscipit maxime earum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem commodi, at nemo dolores officia doloribus error nostrum vero ut quasi voluptate deleniti qui explicabo, incidunt perferendis praesentium expedita quas? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt commodi magni provident aut officiis. Quidem facilis saepe dolorem minima omnis laborum. Laborum vel odio fugiat dolor cupiditate assumenda, repellendus reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam tenetur exercitationem. Nemo dolor quo corrupti exercitationem laborum non blanditiis praesentium. Culpa eaque perferendis optio? Culpa quod recusandae officiis labore?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, doloremque repellat qui quo nostrum, aliquam asperiores maiores esse ut id officia illo. Voluptatibus consectetur numquam, quia unde suscipit maxime earum!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos rem commodi, at nemo dolores officia doloribus error nostrum vero ut quasi voluptate deleniti qui explicabo, incidunt perferendis praesentium expedita quas? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt commodi magni provident aut officiis. Quidem facilis saepe dolorem minima omnis laborum. Laborum vel odio fugiat dolor cupiditate assumenda, repellendus reprehenderit Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia aliquam tenetur exercitationem. Nemo dolor quo corrupti exercitationem laborum non blanditiis praesentium. Culpa eaque perferendis optio? Culpa quod recusandae officiis labore?
+    </p>
     
 </body>
 </html>
