--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -12,59 +12,73 @@
         table {
             border-collapse: collapse;
         }
-        td {
-            border: 1px solid black;
+        caption {
+            font-size: 1.3em;
+            font-weight: bold;
+            padding: 10px;
         }
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+        }
+
     </style>
 </head>
 <body>
-    <h1>Tabelas completass</h1>
-   <table>
-    <tr>
-        <td>Grupo</td>
-        <td>Nomes</td>
-        <td colspan="3">Filmes</td>
-    </tr>
-    <tr>
-        <td rowspan="3">Mulheres</td>
-        <td>Ana Maria Santos</td>
-        <td>Alien</td>
-        <td>Rambo</td>
-        <td>Vingadores</td>
+<table>
+    <h1>Tabelas Completas</h1>
+    <table>
+        <caption>Filmes favoritos</caption>
+        <thead>
+            <th scope="col">Grupo</th>
+            <th scope="col">Nomes</th>
+            <th colspan="3" scope="colgroup">Filmes</th>
 
-    </tr>
-    <tr>
-        <td>Beatriz Souza</td>
-        <td>Hulk</td>
-        <td>Incetion</td>
-        <td>Batman</td>
-    </tr>
-   <tr>
-    <td>Claudia Melo</td>
-    <td>Obivilon</td>
-    <td>Matrix</td>
-    <td>Big Hero</td>
-   </tr>
-    <tr>
-        <td rowspan="3">Homens</td>
-        <td>Bruno Mendonça</td>
-        <td>Intocaveis</td>
-        <td>Amnseia</td>
-        <td>Gladiador</td>
-    </tr>
-    <tr>
-        <td>Daniel Lourenço</td>
-        <td>Wall-E</td>
-        <td>Oldboy</td>
-        <td>Dangal</td>
-    </tr>
-    <tr>
-        <td>Fabiano Mota</td>
-        <td>Star Wars 5</td>
-        <td>Taxi Driver</td>
-        <td>Toy Story</td>
-    </tr>
-   </table>
+        </thead>
+    <tbody>
+        <tr>
+            <th rowspan="3" scope="rowgroup">Mulheres</th>
+            <td>Ana Maria Santos</td>
+            <td>Alien</td>
+            <td>Rambo</td>
+            <td>Vingadores</td>
+       
+        </tr>
+        <tr>
+            <td>Beatriz Souza</td>
+            <td>Hulk</td>
+            <td>Incetion</td>
+            <td>Batman</td>
+        </tr>
+       <tr>
+        <td>Claudia Melo</td>
+        <td>Obivilon</td>
+        <td>Matrix</td>
+        <td>Big Hero</td>
+       </tr>
+        <tr>
+            <th rowspan="3" scope="rowgroup">Homens</th>
+            <td>Bruno Mendonça</td>
+            <td>Intocaveis</td>
+            <td>Amnseia</td>
+            <td>Gladiador</td>
+        </tr>
+        <tr>
+            <td>Daniel Lourenço</td>
+            <td>Wall-E</td>
+            <td>Oldboy</td>
+            <td>Dangal</td>
+        </tr>
+        <tr>
+            <td>Fabiano Mota</td>
+            <td>Star Wars 5</td>
+            <td>Taxi Driver</td>
+            <td>Toy Story</td>
+        </tr>
+    <table>
+
+    </tbody>
+</body>
     
 </body>
 </html>
